crates/tui/src/snapshots/tui__login_view__tests__login_80x24.snap
---
source: crates/tui/src/login_view_tests.rs
expression: "drawn(&login, 80, 24)"
---
Log in                                                                         ✕
Providers
  acme  key
  codex  browser
Secrets
  acme.api_key

















↑↓ move · Enter log in · Esc close
