crates/tui/src/snapshots/tui__login_view__tests__login_browser_waiting_80x24.snap
---
source: crates/tui/src/login_view_tests.rs
assertion_line: 878
expression: "drawn(&login, 80, 24)"
---
Log in                                                                         ✕
Providers
  acme  key
  codex  browser
Secrets
  acme.api_key














Open this URL to log in to codex:
https://auth.example/authorize?state=sssssssssssssssssssssssssssssssssssssssssss
sssssssssssssssssssssssssssssssssssssssssssssssssssssssss
y copy URL · Esc cancel
